# analyze-gitrepo

./: README.md  identities.yaml  pyproject.toml  spec.md
.claude/skills/real-repo-test/: SKILL.md
.github/workflows/: ci.yml
gitstats-reports/: author-summary.md  first-commits.md  identity-debug.md  raw-data.json  repo-summary.md
report-all/: author-summary.md  commit-word-frequencies.md  first-commits.md  identity-debug.md  raw-data.json  repo-summary.md
report-dispo/: author-summary.md  commit-word-frequencies.md  first-commits.md  identity-debug.md  raw-data.json  repo-summary.md
report-fredi-all/: author-summary.md  commit-word-frequencies.md  first-commits.md  identity-debug.md  raw-data.json  repo-summary.md
report-rcs/: author-summary.md  commit-word-frequencies.md  first-commits.md  identity-debug.md  raw-data.json  repo-summary.md
src/gitstats/: __init__.py  aggregator.py  cli.py  config.py  dedup.py  discovery.py  enrichment.py  identity.py  models.py  report.py  scanner.py  tz.py
src/gitstats/enrichers/: __init__.py  jira.py
tests/: conftest.py  test_aggregator.py  test_cli.py  test_dedup.py  test_discovery.py  test_identity.py  test_jira_cli.py  test_jira_enricher.py  test_report.py  test_scanner.py  test_tz.py
tests/reports/: test_author_leaderboard.py  test_author_summary.py  test_commit_heatmap.py  test_commit_word_frequencies.py  test_commit_wordcloud.py  test_commit_wordcloud_interactive.py  test_first_commits.py  test_identity_debug.py  test_jira_tickets_by_type.py  test_raw_data.py  test_repo_summary.py
(+15 files in other folders)
