[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gitstats"
version = "0.1.0"
description = "CLI to analyze multiple git repositories and produce author/commit statistics"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "analyze-gitrepo" }]
dependencies = [
    "pygit2>=1.15",
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "plotly>=5.20",
    "wordcloud>=1.9",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-PyYAML",
]

[project.scripts]
gitstats = "gitstats.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/gitstats"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow: long-running tests that scan large repos"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# Typer's documented pattern uses function calls in argument defaults.
"src/gitstats/cli.py" = ["B008"]
